1.Adding CSS reset 2. HTML5 mode URLs

--- a/src/tpl-index.html
+++ b/src/tpl-index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <base href="/">
     <title>KYCK - Investment Portal</title>
     <meta name="description" content="One Portal, One KYC, Ready for the World" />
     <meta name="keywords" content="Investment, KYC, Singapore, Thailand, Malaysia, Fintech, investment portal, derivatives, brokerage, banks, mutual funds, stocks, Insurance, trading" />
