Adding Lato font from style guide

--- a/src/tpl-index.html
+++ b/src/tpl-index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Investment, KYC, Singapore, Thailand, Malaysia, Fintech, investment portal, derivatives, brokerage, banks, mutual funds, stocks, Insurance, trading" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
     <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
     {% } %}
